# face-collector

./: .gitignore  README.md  app.py  models.py  pyproject.toml  utils.py
static/css/: custom.css
static/js/: faces.js  main.js
templates/: base.html  faces.html  index.html  person_faces.html  persons.html
