[project]
name = "repl-nix-new-repl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "numpy>=2.2.0",
    "opencv-python>=4.10.0.84",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "pillow>=11.0.0",
    "tensorflow>=2.14.0",
    "mtcnn>=1.0.0",
    "flask-migrate>=4.0.7",
    "face-recognition>=1.3.0",
]
